--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node -r ts-node/register -r dotenv/config ./src/index.ts"
+    "start": "node -r ts-node/register ./src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.18",
     "ts-node": "^10.5.0",
@@ -17,8 +18,6 @@
   },
   "dependencies": {
     "body-parser": "^1.19.2",
-    "dotenv": "^16.0.0",
-    "dynamoose": "^2.8.5",
     "express": "^4.17.2"
   }
 }
